--- a/pregunta/core/templates/ask_question.html
+++ b/pregunta/core/templates/ask_question.html
@@ -1,5 +1,14 @@
-<h2>Ask a Question</h2>
-<form method="post">{% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Submit</button>
-</form>
+{% extends 'base.html' %}
+{% block title %}Ask a Question{% endblock %}
+
+{% block content %}
+<div class="form-container">
+  <h2>Ask a Question</h2>
+
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+  </form>
+</div>
+{% endblock %}
