--- a/pregunta/core/templates/home.html
+++ b/pregunta/core/templates/home.html
@@ -1,19 +1,42 @@
-<h1>Welcome to Pregunta</h1>
+{% extends 'base.html' %}
+{% load static %}
 
-{% if request.user.is_authenticated %}
-  <p>Hello, {{ request.user.username }} | <a href="{% url 'logout' %}">Logout</a></p>
-{% else %}
-  <p><a href="{% url 'register' %}">Create Account</a> | <a href="{% url 'login' %}">Login</a></p>
-{% endif %}
+{% block title %}Home - Pregunta{% endblock %}
 
-<h2>Top 10 Most Liked Questions</h2>
-<ul>
+{% block content %}
+  <h1>Welcome to Pregunta</h1>
+
+  <div class="auth-links">
+    {% if request.user.is_authenticated %}
+      <p>Hello, {{ request.user.username }} | <a href="{% url 'logout' %}">Logout</a></p>
+    {% else %}
+      <p><a href="{% url 'register' %}">Create Account</a> | <a href="{% url 'login' %}">Login</a></p>
+    {% endif %}
+  </div>
+
+  <h2>Top 10 Most Liked Questions</h2>
+
   {% for question in questions %}
-    <li>
-      <a href="{% url 'question_detail' question.pk %}">{{ question.title }}</a> - 
-      Likes: {{ question.total_likes }}
-    </li>
+    <div class="question-card">
+      <h3><a href="{% url 'question_detail' question.pk %}">{{ question.title }}</a></h3>
+      <p>{{ question.body }}</p>
+      <p class="likes">Total Likes on Answers: {{ question.total_likes }}</p>
+
+      {% if question.top_answers %}
+        <h4>Top Answers:</h4>
+        <ul class="top-answers">
+          {% for answer in question.top_answers %}
+            <li>
+              <p>{{ answer.body }}</p>
+              <p class="likes">Likes: {{ answer.num_likes }} | Answered by: {{ answer.user.username }}</p>
+            </li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>No answers yet.</p>
+      {% endif %}
+    </div>
   {% empty %}
-    <li>No questions yet.</li>
+    <p>No questions found.</p>
   {% endfor %}
-</ul>
+{% endblock %}
