--- a/pregunta/core/templates/login.html
+++ b/pregunta/core/templates/login.html
@@ -1,6 +1,20 @@
-<h2>Login</h2>
-<form method="post">{% csrf_token %}
-  Username: <input type="text" name="username"><br>
-  Password: <input type="password" name="password"><br>
-  <button type="submit">Login</button>
-</form>
+{% extends 'base.html' %}
+{% block title %}Login{% endblock %}
+
+{% block content %}
+<div class="form-container">
+  <h2>Login</h2>
+  <form method="post">
+    {% csrf_token %}
+    {% if form.errors %}
+      <p class="errorlist">Invalid username or password.</p>
+    {% endif %}
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
+
+  <p style="text-align: center;">Don't have an account?</p>
+  <a href="{% url 'register' %}" class="register-btn">Create Account</a>
+</div>
+{% endblock %}
